# mc_sync_tui

./: Cargo.toml
src/: macros.rs  main.rs  ui.rs
